--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"prop-types": "^15.6.2",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
+		"react-redux": "^7.2.7",
 		"react-router-dom": "^6.2.2"
 	}
 }
