--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
 		"ilib": "^14.6.0",
 		"prop-types": "^15.6.2",
 		"react": "^17.0.1",
-		"react-dom": "^17.0.1",
-		"react-router-dom": "^6.2.2"
+		"react-dom": "^17.0.1"
 	}
 }
