--- a/package.json
+++ b/package.json
@@ -32,20 +32,17 @@
 	"dependencies": {
 		"@enact/core": "^4.0.0",
 		"@enact/i18n": "^4.0.0",
+		"@enact/moonstone": "^4.0.4",
 		"@enact/sandstone": "^2.0.0-alpha.2",
 		"@enact/spotlight": "^4.0.0",
 		"@enact/ui": "^4.0.0",
 		"@enact/webos": "^4.1.4",
 		"@reduxjs/toolkit": "^1.8.0",
+		"@webosose/ares-cli": "^2.3.1",
 		"ilib": "^14.6.0",
 		"prop-types": "^15.6.2",
 		"react": "^17.0.1",
-<<<<<<< HEAD
-		"react-dom": "^17.0.1"
-=======
 		"react-dom": "^17.0.1",
-		"react-redux": "^7.2.7",
-		"react-router-dom": "^6.2.2"
->>>>>>> 32bc4acd3b9ad078bd08fc8e18db8a042abf2604
+		"react-redux": "^7.2.7"
 	}
 }
