--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@enact/webos": "^4.1.4",
 		"@reduxjs/toolkit": "^1.8.0",
 		"@webosose/ares-cli": "^2.3.1",
+		"axios": "^0.26.1",
 		"ilib": "^14.6.0",
 		"prop-types": "^15.6.2",
 		"react": "^17.0.1",
