--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"lint": "enact lint .",
 		"license": "enact license",
 		"test": "enact test",
-		"test-watch": "enact test --watch"
+		"test-watch": "enact test --watch",
+		"start": "sh ./start.sh"
+		
 	},
 	"license": "UNLICENSED",
 	"private": true,
@@ -47,6 +49,7 @@
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
 		"react-redux": "^7.2.7",
-		"react-router-dom": "^6.2.2"
+		"react-router-dom": "^6.2.2",
+		"sh": "^0.0.3"
 	}
 }
